# AdvisoryAI-Jarvis

./: .gitignore  AGENTS.md  Dockerfile  Procfile  README.md  REPORT.md  pyproject.toml  requirements.txt
chroma_db/: chroma.sqlite3
email_archive/alan_partridge/: 2026-01-15_contract_renewal_update.txt  2026-01-22_portugal_property_links.txt
email_archive/antony_makepeace/: 2026-01-10_antony_job_offer_details.txt  2026-01-17_life_insurance_trust_reminder.txt
email_archive/basil_fawlty/: 2026-01-12_sybil_frustration_sale_delay.txt  2026-01-21_basil_valuation_position.txt
email_archive/brian_potter/: 2026-01-23_bungalow_viewing_text.txt
email_archive/david_chen/: 2025-01-08_bonus_confirmation.txt
email_archive/delbert_wilkins/: 2025-01-15_marlene_cohabitation.txt
email_archive/emma_thompson/: 2026-01-15_lpa_status_update.txt  2026-01-22_mother_update.txt
email_archive/hyacinth_bucket/: 2026-01-15_sheridan_urgency.txt  2026-01-18_richard_private_concern.txt  2026-01-24_car_listings_forward.txt
email_archive/keith_lard/: 2026-01-15_maureen_cruise_excursions.txt
email_archive/robert_hughes/: 2026-01-12_jennifer_grandchild_update.txt  2026-01-20_btl_rate_update.txt
email_archive/rodney_trotter/: 2026-01-10_cassandra_promotion.txt  2026-01-14_directors_loan_followup.txt  2026-01-19_house_purchase_frustration.txt
email_archive/sarah_thompson/: 2026-01-03_income_confirmation.txt
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
raw_datasets/: Sarah Thompson MeetingNote 1.docx
sample/: 2026-02-01_ill_situation.txt
scripts/: ingest_documents.py
src/jarvis/: __init__.py  (+5 more)
workspace/: AGENTS.md  HEARTBEAT.md  IDENTITY.md  SOUL.md  TOOLS.md  USER.md
(+117 files in other folders)
